--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+<meta name="google-site-verification" content="A6ceRaKg6gwBOmukit7ZV7pFWYJUCaSjIP6edhtH14Q" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <meta name="description" content="description"/>
 <meta name="keywords" content="keywords"/> 
